# ml-tagger

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: docker.yml  rust.yml  snyk.yml
example/: Makefile  docker-compose.yml
profile/: Makefile
src/: allocator.rs  config.rs  lib.rs  main.rs  utils.rs
src/handlers/: clean_cache.rs  data.rs  error.rs  errors.rs  live.rs  metrics.rs  mod.rs  pprof.rs  tag.rs  tag_parsed.rs
src/inspect-dict/: main.rs
src/processors/: clitics.rs  embedding.rs  embedding_ff.rs  lemmatize_words.rs  lex.rs  metrics.rs  mod.rs  onnx.rs  predict.rs  restorer.rs  static_words.rs  tags.rs  url_finder.rs
src/utils/: mod.rs  perf.rs  strings.rs
