[package]
name = "ml-tagger"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.3", features = ["env"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
warp = "0.3.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
fasttext = "0.7.8"
anyhow = "1.0.81"

[dev-dependencies]
approx = "0.5.1"
more-asserts = "0.3.1"

[[bin]]
name = "ml-tagger-ws"
path = "src/main.rs"
