[package]
name = "ml-tagger"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.3", features = ["env"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
warp = "0.3.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
anyhow = "1.0.81"
fasttext = "0.7.8"
onnxruntime-ng = { version = "1.16.1" }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.79"
moka = { version = "0.12.5", features = ["future"] }
regex = "1.10.4"
once_cell = "1.19.0"
reqwest-retry = "0.5.0"
reqwest-middleware = "0.3.0"
prometheus = "0.13.3"
url = "=2.5.0"
ulid = "1.1.3"

[dev-dependencies]
approx = "0.5.1"
more-asserts = "0.3.1"
pretty_assertions = "1"

[[bin]]
name = "ml-tagger-ws"
path = "src/main.rs"
