[package]
name = "ml-tagger"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"
fasttext = "0.7"
ort = { version = "2.0.0-rc.9", features = ["cuda"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
regex = "1.10"
once_cell = "1.19"
reqwest-retry = "0.5"
reqwest-middleware = "0.3"
prometheus = "0.13"
url = "=2.5"
ulid = "1.1"
chrono = "0.4"
ndarray = "0.16"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
finalfusion = "0.18"
axum = { version = "0.7", features = ["macros", "http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["limit", "timeout", "trace"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
more-asserts = "0.3"
pretty_assertions = "1.4"

[[bin]]
name = "ml-tagger-ws"
path = "src/main.rs"
